// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UrlInputListField when \`editable\` is false renders correctly when \`showFieldDescription\` is false 1`] = `
<List
  celled={true}
  style={
    Object {
      "maxHeight": "100px",
      "overflowY": "auto",
    }
  }
>
  <ListItem
    key="0"
  >
    <a
      href="testando..."
      target="_blank"
    >
      testando...
    </a>
  </ListItem>
</List>
`;

exports[`UrlInputListField when \`editable\` is false renders correctly when \`showFieldDescription\` is true 1`] = `
<FormField>
  <b>
    Testando:
    :
  </b>
  <List
    celled={true}
    style={
      Object {
        "marginTop": "0px",
        "maxHeight": "100px",
        "overflowY": "auto",
      }
    }
  >
    <ListItem
      key="0"
    >
      <a
        href="testando..."
        target="_blank"
      >
        testando...
      </a>
    </ListItem>
  </List>
</FormField>
`;

exports[`UrlInputListField when \`editable\` is true renders correctly 1`] = `
<div>
  <FormGroup
    widths={2}
  >
    <FormInput
      as={[Function]}
      control={[Function]}
      error={false}
      fluid={true}
      name="1"
      onChange={[Function]}
      placeholder="Testando:"
      type="url"
      value=""
      width={13}
    />
    <FormButton
      as={[Function]}
      color="teal"
      content="Add"
      control={[Function]}
      onClick={[Function]}
      width={3}
    />
  </FormGroup>
  <List
    celled={true}
    style={
      Object {
        "marginBottom": "14px",
        "maxHeight": "100px",
        "overflowY": "auto",
      }
    }
  >
    <ListItem
      key="0"
    >
      <ListContent
        floated="right"
      >
        <ListIcon
          link={true}
          name="remove"
          onClick={[Function]}
        />
      </ListContent>
      <ListContent>
        <a
          href="testando..."
          target="_blank"
        >
          testando...
        </a>
      </ListContent>
    </ListItem>
  </List>
</div>
`;
